# ProbsetCTFArkav9

./: .gitmodules  README.md  install.sh  sync.sh
.ctf/: config
.github/workflows/: cd.yml
finals/binary exploitation/Impossible Roulette/: Makefile  challenge.yml
finals/binary exploitation/pewpewpew/: challenge.yml
finals/cryptography/: challenge.yml
finals/cryptography/--python/: challenge.yml
finals/cryptography/Breathing Exercise/: challenge.yml
finals/cryptography/guess god/: challenge.yml
finals/forensics/Assesment/: challenge.yml
finals/forensics/Farewell/: challenge.yml
finals/miscellaneous/chovid-locker/: challenge.yml
finals/miscellaneous/zzz/: Makefile  challenge.yml
finals/reverse engineering/Changing Star/: Makefile  challenge.yml
finals/reverse engineering/Lost from Light/: Makefile  challenge.yml
finals/reverse engineering/Python with Extra Spices/: challenge.yml  pack.sh
finals/web exploitation/Calculator of Special People v2/: challenge.yml  solve.py
finals/web exploitation/Old But Gold/: challenge.yml  solve.md
quals/a template/copy this/: challenge.yml
quals/binary exploitation/Fortune's Tale/: Makefile  challenge.yml
quals/binary exploitation/KV/: Makefile  challenge.yml
quals/binary exploitation/Kata-kata hari ini/: challenge.yml
quals/binary exploitation/WWW 0/: Makefile  challenge.yml
quals/cryptography/2+10/: .gitignore  challenge.yml  setup-local.sh  (+1 more)
quals/reverse engineering/Edge of Perception/src/client_rust/: Cargo.toml
quals/reverse engineering/Edge of Perception/src/client_rust/src/: main.rs
(+246 files in other folders)
