[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
termion = "4.0.3"
nix = { version = "0.29", features = ["signal", "fs", "poll", "term", "ioctl"] }
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
